services/consent-api/deployments/service/templates/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: consent-api
  labels:
    istio-injection: enabled
