services/consent-api/deployments/service/templates/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: consent-api
  name: consent-api
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: consent-api
  template:
    metadata:
      labels:
        io.kompose.service: consent-api
      annotations:
        sidecar.istio.io/userVolume: '[{"name":"descriptor","configmap":{"name":"consent-bied-set","items":[{"key":"consent.pb","path":"consent.pb"}]}}]'
        sidecar.istio.io/userVolumeMount: '[{"name":"descriptor","mountPath":"/etc/envoy"}]'
    spec:
      containers:
        - name: consent-api
          image: consent-api:latest
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              cpu: "50m"
          ports:
            - containerPort: 5050
