services/consent-api/deployments/service/templates/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: consent-db
  name: consent-db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: consent-db
  template:
    metadata:
      labels:
        io.kompose.service: consent-db
      annotations:
        sidecar.istio.io/inject: "false"
    spec:
      containers:
        - name: consent-db
          image: mcr.microsoft.com/mssql/server
          imagePullPolicy: IfNotPresent
          securityContext:
            privileged: true
          resources:
            requests:
              cpu: "10m"
              memory: "256Mi"
            limits:
              cpu: "100m"
              memory: "512Mi"
          ports:
            - containerPort: 1433
