services/consent-api/deployments/service/templates/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: consent-api
  name: consent-api
spec:
  ports:
  - name: grpc
    protocol: TCP
    port: 5050
    targetPort: 5050
  selector:
    io.kompose.service: consent-api
