services/consent-api/deployments/service/templates/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: consent-api
  labels:
    io.kompose.service: consent-db
  name: consent-db
spec:
  ports:
  - name: "1433"
    port: 1433
    targetPort: 1433
  selector:
    io.kompose.service: consent-db
